Create the Navbar of the application

--- a/News_Application/index.html
+++ b/News_Application/index.html
@@ -9,6 +9,27 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="#">
+                    <img src="Web-logo-removebg-preview.png" alt="logo">
+                </a>
+            </div>
+            <div>
+                <ul class="nav-items">
+                    <li class="nav-topic">Finance</li>
+                    <li class="nav-topic">Technology</li>
+                    <li class="nav-topic">Football</li>
+                </ul>
+            </div>
+            <div class="search">
+                <input type="text" placeholder="Search News..." class="input-search" />
+                <button>Search</button>
+            </div>
+        </nav>
+
+    </header>
 
     <script src="app.js"></script>
 </body>
