Create the article box

--- a/News_Application/index.html
+++ b/News_Application/index.html
@@ -25,11 +25,25 @@
             </div>
             <div class="search">
                 <input type="text" placeholder="Search News..." class="input-search" />
-                <button>Search</button>
+                <button id="btn">Search</button>
             </div>
         </nav>
-
     </header>
+    <main>
+        <div class="cards-container">
+            <div class="card-item">
+                <div class="card-header">
+                    <img src="https://cimage.se/image/example/kodim13.png?h=150" alt="image">
+                </div>
+                <div class="description">
+                    <h3>Title of the news goes here...</h3>
+                    <h5 class="publisher">ABC Publisher 19/02/24</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, delectus.</p>
+                </div>
+            </div>
+        </div>
+
+    </main>
 
     <script src="app.js"></script>
 </body>
