Add small functionalities

--- a/News_Application/index.html
+++ b/News_Application/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="#">
+                <a href="#" onclick="loadPage()">
                     <img src="Web-logo-removebg-preview.png" alt="logo">
                 </a>
             </div>
@@ -25,7 +25,7 @@
             </div>
             <div class="search">
                 <input id="search-txt" type="text" placeholder="Search News..." class="input-search" />
-                <button id="btn" onclick="searchNews()">Search</button>
+                <button id="btn">Search</button>
             </div>
         </nav>
     </header>
