Add footer to the interface and Readme file to the project

--- a/News_Application/index.html
+++ b/News_Application/index.html
@@ -48,7 +48,10 @@
             </div>
         </div>
     </template>
-
+    <footer>
+        <p>Copyright &copy; &nbsp; 2024 &nbsp; Ajoy Paul</p>
+        <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+    </footer>
     <script type="module" src="app.js"></script>
 </body>
 
